# SmileX-Agent-Market

./: .env.example  .gitignore  DATA_DICTIONARY.md  README.md  UV_USAGE.md  main.py  migrate_database.py  move_tests.py  pyproject.toml  requirements.txt  run.bat  run.sh  test.py  test_content_scoring.py  test_english_article_evaluation.py  test_evaluator.py  test_evaluator_from_storage.py  test_llm_config.py  test_log_chinese.py  test_logger.py  test_search.py
.trae/documents/: 运营增长Agent项目规划.md
.trae/rules/: project_rules.md
agent/: evaluator.py  prompt_templates.py
config/: settings.py
crawler/: base_crawler.py
crawler/zhihu/: zhihu_crawler.py
data/: models.py  storage.py
script/test/: simple_log_test.py  simple_test.py  test_db_save.py  test_log_encoding.py  test_module.py  test_search.py
utils/: logger.py
visualization/: charts.py
